# TempDir

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  build.bat  build.sh  coverage.sh  index.html  readme.md  vcpkg.json
.github/workflows/: coverage.yml  macos.yml  ubuntu.yml  windows.yml
coverage-report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-report/tempdir/: index-sort-f.html  index-sort-l.html  index.html  tempdir.hpp.func-c.html  tempdir.hpp.func-sort-c.html  tempdir.hpp.func.html  tempdir.hpp.gcov.html
examples/: CMakeLists.txt  example.cpp
include/bw/tempdir/: tempdir.hpp
test/: CMakeLists.txt
test/catch2/unit_tests/: tempdir_tests.cpp
